# nexus

./: .gitignore  Cargo.toml  README.md  install.sh  nexus-lang-0.1.0.tgz  nexus-lang-0.1.2.tgz  package-lock.json  package.json  repl_test.txt  test_range.vx
.github/: FUNDING.yml
.github/workflows/: release.yml
crates/nexus-ir/: Cargo.toml
crates/nexus-ir/src/: lib.rs
crates/vice/: Cargo.toml  README.md
crates/vice/src/: interaction.rs  lib.rs  net.rs  runtime.rs
crates/vortex/: Cargo.toml  README.md  REPL_USAGE.md  build.rs  example.vx  package-lock.json
crates/vortex/src/: ast.rs  codegen_ic.rs  gpu_runtime.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  repl.rs
crates/vortex/tests/: e2e.rs
crates/vortex/vortex-lang-wasm/: Cargo.toml  vercel.json
crates/vortex/vortex-lang-wasm/www/: index.html  style.css
docs/: roadmap.md
docs/vortex-lang-wasm/: Cargo.toml  vite.config.js
docs/vortex-lang-wasm/.github/workflows/: deploy.yml
docs/vortex-lang-wasm/src/vortex_core/: ast.rs  lexer.rs
docs/vortex-lang-wasm/www/: terminal.js
kernels/: vector_add.cu
npm/: getBinary.js  install.js  run.js
src/: ast.rs  interaction.rs  interpreter.rs  lexer.rs  main.rs  net.rs  parser.rs  runtime.rs  simple_parser.rs  syntax.txt
vortex-lang-wasm/: .gitignore  package.json  vite.config.js
vortex-lang-wasm/src/: lib.rs
vortex-lang-wasm/src/vortex_core/: gpu_runtime.rs  interpreter.rs  mod.rs  parser.rs  token.rs
