[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = "12.0"
colored = "2.0"
clap = { version = "4", features = ["derive"] }
nexus-ir = { path = "../nexus-ir" }
vice = { path = "../vice" }
# CUDA dependencies removed for stability

[[bin]]
name = "nexus"
path = "src/main.rs"
